--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon app.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -14,6 +15,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^8.0.0",
     "morgan": "~1.9.1",
+    "nodemon": "^3.0.1",
     "pug": "2.0.0-beta11"
   }
 }
