--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "axios": "^1.6.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -16,6 +17,7 @@
     "mongoose": "^8.0.0",
     "morgan": "~1.9.1",
     "nodemon": "^3.0.1",
+    "openai": "^4.17.4",
     "pug": "2.0.0-beta11"
   }
 }
